WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76097
Object.defineProperty([], 'length', {}) should not make length read-only
https://bugs.webkit.org/show_bug.cgi?id=76097
Summary
Object.defineProperty([], 'length', {}) should not make length read-only
Gavin Barraclough
Reported
2012-01-11 12:50:02 PST
We should be checking writablePresent().
Attachments
Fix
(7.09 KB, patch)
2012-01-11 13:01 PST
,
Gavin Barraclough
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2012-01-11 13:01:54 PST
Created
attachment 122081
[details]
Fix
Gavin Barraclough
Comment 2
2012-01-11 17:30:42 PST
Fixed in
r104777
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug