Object.defineProperty([], 'length', {}) should not make length read-only https://bugs.webkit.org/show_bug.cgi?id=76097

Reviewed by Oliver Hunt.

Source/JavaScriptCore:

* runtime/JSArray.cpp:
(JSC::JSArray::defineOwnProperty):
    - We should be checking writablePresent().

LayoutTests:

* fast/js/array-defineOwnProperty-expected.txt:
* fast/js/script-tests/array-defineOwnProperty.js:
    - Added test.



Canonical link: https://commits.webkit.org/92942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104777 268f45cc-cd09-0410-ab3c-d52691b4dbfc